Fixed mobile column left spacing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,6 +79,12 @@ article.post.generate-columns .crdm_modern_excerpt .post-image {
 	margin-bottom: 1em;
 }
 
+@media (max-width: 767px) {
+	.generate-columns-container {
+		margin-left: unset !important;
+	}
+}
+
 .entry-summary .read-more {
 	display: block;
 	font-weight: 700;
